--- a/gradle.properties
+++ b/gradle.properties
@@ -12,7 +12,7 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Wed Oct 04 15:11:52 BST 2017
-systemProp.http.proxyHost=wwwcache.leedsbeckett.ac.uk
+#Wed Oct 11 11:26:48 BST 2017
+systemProp.http.proxyHost=192.168.208.51
 org.gradle.jvmargs=-Xmx1536m
 systemProp.http.proxyPort=3128
